--- a/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
+++ b/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
@@ -243,6 +243,8 @@
   <ItemGroup>
     <Compile Include="AppCode\HighlightingExpandConverter.cs" />
     <Compile Include="AppCode\ImpersonationEventArgs.cs" />
+    <Compile Include="AppCode\LogManager.cs" />
+    <Compile Include="AppCode\Paths.cs" />
     <Compile Include="AppCode\PropertySorter.cs" />
     <Compile Include="ConnectionDetail.cs" />
     <Compile Include="ConnectionFile.cs" />
@@ -297,7 +299,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_ConfigurationName="Release" BuildVersion_UpdateAssemblyVersion="False" BuildVersion_UpdateFileVersion="False" BuildVersion_BuildVersioningStyle="None.None.DeltaBaseDate.Increment" BuildVersion_StartDate="2012/1/1" />
+      <UserProperties BuildVersion_StartDate="2012/1/1" BuildVersion_BuildVersioningStyle="None.None.DeltaBaseDate.Increment" BuildVersion_UpdateFileVersion="False" BuildVersion_UpdateAssemblyVersion="False" BuildVersion_ConfigurationName="Release" />
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
